# mcp-demo

./: .env.example  README.md  main.py  pyproject.toml
